Changelog
=========

4.0.5 (unreleased)
------------------

- Upgraded to collective.solr 4.0, refs #14362 [reinhardt]


4.0.4 (2016-10-20)
------------------

- Added currentVersion, refs #13874 [reinhardt]


4.0.3 (2016-10-20)
------------------

- Fixed resourceType, refs #13874 [reinhardt]


4.0.2 (2016-07-11)
------------------

- Only run doi registration for review types, refs #13566 [reinhardt]


4.0.1 (2016-05-23)
------------------

- Fixed path depth, refs #13615 [reinhardt]
- Free memory after every issue and volume, refs #13615 [reinhardt]
- Syndication fix for Plone 4.3, refs #11785 #13624 [reinhardt]


4.0.0 (2016-04-25)
------------------

- Chronicon-Export: new schema; added originalurl, page_first, page_last;
  added bvid, updated schema, refs #10873 [reinhardt]
- DOI registration support, refs #10976 #12126 [reinhardt]
- Fixes for Plone 4.3, refs #11785 [reinhardt]
- removed dfg reference from footer, refs #11972 [reinhardt]
- LZA improvements, refs #12383 [reinhardt]
- Migrated to slc.zopescript, refactored, refs #12795 [reinhardt]
- added metadata-export, sehepunkte-import and newsletter console script,
  refs #12795 [reinhardt]
- catch and log exceptions in graph_parse [reinhardt]
- test fixes and refactorings [reinhardt]


3.3.2 (2015-09-01)
------------------

- originalurl must correpsond to canonical_uri, refs #10873 [reinhardt]
- removed terms with duplicate id, refs #10622 [reinhardt]


3.3.1 (2015-08-22)
------------------

- xml export: added originalurl, page_first and page_last; removed bvid; use
  titles instead of ids in xml, refs #10873 [reinhardt]


3.3.0 (2015-04-07)
------------------

- fixed typo that caused review xml to bleed into other issues, refs #11157
  [reinhardt]
- show full name instead of user name in the comments, refs #11156 [reinhardt]


3.2.1 (2014-10-07)
------------------

- default to None for get_package_journal_issue, refs #5578 [reinhardt]